Small content updates

--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -1,24 +1,25 @@
 <section class="content-box">
     <nav class="menu">
-        <a href="#" title="Support">Support</a>
-        <a href="#" title="Service Status">
-            <i class="icon icon-service-status"></i>
+        <!-- <a href="https://" title="Support">Support</a> -->
+        <a href="http://status.gndf.io/" title="Service Status">
             Service Status
         </a>
-        <a href="http://docs.gandalf4.apiary.io/" title="Documentation">Documentation</a>
+        <a href="http://docs.gndf.io/" title="Documentation">Documentation</a>
     </nav>
 
     <p>
-        We want to thank
-        <a href="http://blog.bugsnag.com/bugsnag-loves-open-source" target="_blank" title="BugSnag">BugSnag</a>
-        for a free Open Source license
-    </p>
-
-    <p>
-        <a href="http://nebo15.com/" title="Nebo#15">
+        <a href="http://nebo15.com/" title="Nebo #15">
             <i class="icon icon-nebo-15"></i>
         </a>
     </p>
 
-    Copyright ⓒ 2016. All rights reserved
+    <p>
+      © <a href="http://nebo15.com/" title="Nebo #15">Nebo #15</a>, 2016.
+    </p>
+
+    <p>
+        We want to thank
+        <a href="http://blog.bugsnag.com/bugsnag-loves-open-source" target="_blank" title="BugSnag" rel="nofollow">BugSnag</a>
+        for a free Open Source license
+    </p>
 </section>
