--- a/src/templates/whats-next.html
+++ b/src/templates/whats-next.html
@@ -22,5 +22,13 @@
                 Use scientific method to improve your scoring engine. Create a hypothesis, add a variant that implements it and allocate some traffic to test it.
             </p>
         </li>
+
+        <li>
+            <h5>Try Machine Learning</h5>
+            <p>
+                Consider investigation more modern Machine Learning approaches. Get familiar with Regression, Clustering and Anomaly Detection. Read more about Deep Learning, Neuron Networks, Random Forests and Regression Analysis.
+                <a href="https://www.tensorflow.org/" rel="nofollow">TensorFlow</a> is a good tool to look at.
+            </p>
+        </li>
     </ul>
 </section>
