--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -2,14 +2,14 @@
     <button class="menu-toggle"><b></b></button>
 
     <nav class="menu" role="navigation">
-        <a href="https://apps.gndf.io/" class="sign-in">Sign in</a>
+        <a href="https://apps.gndf.io/" class="sign-in">Sign In</a>
 
-        <a href="#" title="Support">Support</a>
-        <a href="#" title="Service status">
+        <!-- <a href="" title="Support">Support</a> -->
+        <a href="https://status.gndf.io/" title="Service status">
             <i class="icon icon-service-status"></i>
             Service Status
         </a>
-        <a href="http://docs.gandalf4.apiary.io/" title="Documentation">Documentation</a>
+        <a href="http://docs.gndf.io/" title="Documentation">Documentation</a>
 
         <a href="https://github.com/Nebo15/?utf8=%E2%9C%93&query=gandalf" class="button" rel="nofollow" title="Source code">Source code</a>
     </nav>
