--- a/src/templates/story-gandalf.html
+++ b/src/templates/story-gandalf.html
@@ -4,8 +4,10 @@
     <img src="images/gandalf-shadow.png">
 
     <p>
-        We – are production oriented team, and we work for a fintech company. Almost all project that we created need a decision engine that reduces business risks. And all solutions we can find is ether old and ugly, or very expensive. So we decided to create free open-source alternative, that will be scalable, reliable and flexible enough to cover 95% of cases.
+        We – are product-oriented fintech team. Almost all project that we created need a decision engine that reduces business risks. And all solutions we could find is ether old and ugly, or very expensive. So we decided to create free open-source alternative, that will be scalable, reliable and flexible enough to cover 95% of cases.
+        <br>
         To make is suitable for Big Data we decided to build it on top of reliable open-source database MongoDB, that have good scaling capabilities and easy to maintain.
-        Also we believe that vendor-lock is a bad thing, so we published all source code on a GPL license, so you are free to change it as you wish.
+        <br>
+        Also we believe that vendor-lock is a bad thing, so we published all source code under a GPL license, feel free to change it as you wish.
     </p>
 </article>
