--- a/src/styles/components/menu.css
+++ b/src/styles/components/menu.css
@@ -1,11 +1,12 @@
 .menu {
     text-align: left;
     margin-bottom: 64px;
-    transition: height .2s ease;
+    transition: opacity .2s ease, visibility .2s ease;
 }
 
 .menu.active {
-    height: 170px;
+    visibility: visible;
+    opacity: 1;
 }
 
 .menu a {
@@ -37,8 +38,11 @@ a.sign-in {
 }
 
 .menu-toggle {
+    position: relative;
     display: none;
     width: 40px;
+    margin-bottom: 64px;
+    z-index: 2;
 }
 
 .menu-toggle b,
@@ -49,8 +53,22 @@ a.sign-in {
     width: 100%;
     height: 3px;
     background-color: #fff;
+    transition: transform .2s ease, opacity .2s ease;
 }
 
 .menu-toggle b {
     margin: 8px 0;
+}
+
+.menu-toggle.active b {
+    opacity: 0;
+}
+
+.menu-toggle.active:after {
+    transform: translateY(-9px) rotate(-45deg);
+}
+
+
+.menu-toggle.active:before {
+    transform: translateY(12px) rotate(45deg);
 }
