Change icon for retina

--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -6,7 +6,7 @@
 
         <!-- <a href="" title="Support">Support</a> -->
         <a href="https://status.gndf.io/" title="Service status">
-            <i class="icon icon-service-status"></i>
+            <i class="icon-service-status"></i>
             Service Status
         </a>
         <a href="http://docs.gndf.io/" title="Documentation">Documentation</a>
