--- a/src/templates/whats-next.html
+++ b/src/templates/whats-next.html
@@ -26,7 +26,7 @@
         <li>
             <h5>Try Machine Learning</h5>
             <p>
-                Consider investigation more modern Machine Learning approaches. Get familiar with Regression, Clustering and Anomaly Detection. Read more about Deep Learning, Neuron Networks, Random Forests and Regression Analysis.
+                Consider investigation more modern Machine Learning approaches. Get familiar with Regression, Clustering and Anomaly Detection. Read more about Deep Learning, Neural Networks, Random Forests and Regression Analysis.
                 <a href="https://www.tensorflow.org/" rel="nofollow">TensorFlow</a> is a good tool to look at.
             </p>
         </li>
