--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -5,7 +5,7 @@
         <a href="https://apps.gndf.io/" class="sign-in">Sign In</a>
 
         <!-- <a href="" title="Support">Support</a> -->
-        <a href="https://status.gndf.io/" title="Service status">
+        <a href="http://status.gndf.io/" title="Service status">
             <i class="icon-service-status"></i>
             Service Status
         </a>
