--- a/src/templates/story-gandalf.html
+++ b/src/templates/story-gandalf.html
@@ -4,9 +4,9 @@
     <img src="images/gandalf-shadow.png">
 
     <p>
-        We – are product-oriented fintech team. Almost all project that we created need a decision engine that reduces business risks. And all solutions we could find is ether old and ugly, or very expensive. So we decided to create free open-source alternative, that will be scalable, reliable and flexible enough to cover 95% of cases.
+        We are product-oriented <a href="http://nebo15.com/">fintech team</a>. Almost all projects we created needed a decision engine that reduces business risks. And all solutions we could find is hard to use and maintain, or very expensive. So we decided to create free open-source alternative, that is scalable, reliable and flexible enough to cover 95% of cases.
         <br>
-        To make is suitable for Big Data we decided to build it on top of reliable open-source database MongoDB, that have good scaling capabilities and easy to maintain.
+        We decided to use open-source database MongoDB that have good scaling capabilities to make it suitable for Big Data.
         <br>
         Also we believe that vendor-lock is a bad thing, so we published all source code under a GPL license, feel free to change it as you wish.
     </p>
