Added browserstack to footer

--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -18,8 +18,10 @@
     </p>
 
     <p>
-        We want to thank
-        <a href="http://blog.bugsnag.com/bugsnag-loves-open-source" target="_blank" title="BugSnag" rel="nofollow">BugSnag</a>
-        for a free Open Source license
+        Special thans for Open Source supporters:
+        <ul>
+          <li><a href="http://blog.bugsnag.com/bugsnag-loves-open-source" target="_blank" title="BugSnag" rel="nofollow">BugSnag</a> - very helpful tool for monitoring applications in production.</li>
+          <li><a href="https://www.browserstack.com/" target="_blank" title="BrowserStack" rel="nofollow">BrowserStack</a> - best tool for cross-browser testing.</li>
+        </ul>
     </p>
 </section>
