--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -18,10 +18,10 @@
     </p>
 
     <p>
-        Special thans for Open Source supporters:
+        Special thanks for Open Source supporters:
         <ul>
-          <li><a href="http://blog.bugsnag.com/bugsnag-loves-open-source" target="_blank" title="BugSnag" rel="nofollow">BugSnag</a> - very helpful tool for monitoring applications in production.</li>
-          <li><a href="https://www.browserstack.com/" target="_blank" title="BrowserStack" rel="nofollow">BrowserStack</a> - best tool for cross-browser testing.</li>
+          <li><a href="http://blog.bugsnag.com/bugsnag-loves-open-source" target="_blank" title="BugSnag" rel="nofollow">BugSnag</a> for helping us to find application bugs in production.</li>
+          <li><a href="https://www.browserstack.com/" target="_blank" title="BrowserStack" rel="nofollow">BrowserStack</a> for best cross-browser testing tool.</li>
         </ul>
     </p>
 </section>
