--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -14,12 +14,12 @@
     </p>
 
     <p>
-      © <a href="http://nebo15.com/" title="Nebo #15">Nebo #15</a>, 2016.
+      © <a href="http://nebo15.com/" title="Nebo #15">Nebo #15</a>, <%= year %>.
     </p>
 
     <p>
         Special thanks for Open Source supporters:
-        <ul>
+        <ul class="no-bullets">
           <li><a href="http://blog.bugsnag.com/bugsnag-loves-open-source" target="_blank" title="BugSnag" rel="nofollow">BugSnag</a> for helping us to find application bugs in production.</li>
           <li><a href="https://www.browserstack.com/" target="_blank" title="BrowserStack" rel="nofollow">BrowserStack</a> for best cross-browser testing tool.</li>
         </ul>
